[project]
name = "ch07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "jupyterlab>=4.6.1",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "notebook>=7.6.0",
    "pypdf>=6.14.2",
    "unstructured[docx,pdf]>=0.24.1",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "jupyterlab-lsp>=5.3.0",
    "python-lsp-server[all]>=1.14.0",
]
